--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     letter-spacing: 1;
     font-family: "Roboto", sans-serif;
     line-height: 1.3;
-
 }
 
 html,
@@ -145,8 +144,15 @@ a {
     font-size: large;
     background-color: transparent;
     color: white;
+    cursor: pointer;
 }
-
+@media screen and (max-width:640px) {
+    .right button {
+        height: 40px;
+    width: 120px;
+    font-size: medium;
+    }
+}
 .stroke-heading {
     position: relative;
     text-align: center;
@@ -159,7 +165,7 @@ a {
     color: transparent;
     -webkit-text-stroke: 2px grey;
     font-family: Arial, Helvetica, sans-serif;
-    opacity: 0.1;
+    opacity: 0.2;
 }
 
 .stroke-heading h3 {
@@ -170,6 +176,7 @@ a {
     top: 7vw;
     left: 36.7vw;
 }
+
 
 .stroke-heading-top {
     position: relative;
@@ -214,6 +221,11 @@ a {
 
     .table-right {
         margin-top: -10px;
+    }
+    .mybtnc{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
 }
@@ -283,6 +295,7 @@ a {
     background-color: transparent;
     color: rgb(11, 206, 175);
     margin-left: 15px;
+    cursor: pointer;
 }
 
 .stroke-heading-large {
@@ -299,7 +312,7 @@ a {
     color: transparent;
     -webkit-text-stroke: 2px grey;
     font-family: Arial, Helvetica, sans-serif;
-    opacity: 0.1;
+    opacity: 0.2;
 }
 
 .stroke-heading-large h3 {
@@ -386,7 +399,7 @@ p {
     color: transparent;
     -webkit-text-stroke: 2px grey;
     font-family: Arial, Helvetica, sans-serif;
-    opacity: 0.1;
+    opacity: 0.2;
 }
 
 .myskills {
@@ -765,7 +778,7 @@ p {
 
 
 .myfooter {
-    margin: 32px 0px;
+    margin-top: 50px;
     background: rgb(11, 206, 175);
     width: 100%;
     height: 300px;
