--- a/style.css
+++ b/style.css
@@ -42,6 +42,19 @@ body {
     color: rgb(2, 2, 32);
     background-color: aqua;
 }
+.myloading{
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background: #ffffff;
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+}
+.myloading img{
+    height: 150px;
+    width: 150px;
+}
 
 .photo-pro {
     height: 100vh;
