--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
     color: rgb(2, 2, 32);
     background-color: aqua;
 }
-.myloading{
+
+.myloading {
     position: absolute;
     height: 100vh;
     width: 100%;
@@ -51,13 +52,12 @@ body {
     display: flex;
     justify-content: center;
 }
-.myloading img{
+
+.myloading img {
     height: 100px;
     width: 100px;
 }
-#download-resume{
-    z-index: 100;
-}
+
 
 .photo-pro {
     height: 100vh;
@@ -65,32 +65,8 @@ body {
     background-color: rgb(11, 206, 175);
     display: flex;
     justify-content: space-around;
-    align-items: start;
+    align-items: center;
 }
-
-@media screen and (max-width:640px) {
-    .photo-pro {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .right h1 {
-        align-items: center;
-    }
-    
-    #left-img {
-        width: 250px;
-        height: 250px;
-        border: 2px solid red;
-    }
-
-    .table {
-        flex-direction: column;
-    }
-
-}
-
 .left {
     height: 100%;
     width: 40vw;
@@ -135,6 +111,34 @@ a {
     padding: 20px 0px;
 }
 
+
+
+@media screen and (max-width:940px) {
+    .photo-pro {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .right{
+        align-items: center;
+    }
+    .right h1 {
+        font-size: 60px;
+        align-items: center;
+    }
+    
+    #left-img {
+        width: 250px;
+        height: 250px;
+        border: 2px solid red;
+    }
+
+    .table {
+        flex-direction: column;
+    }
+
+}
+
 @media screen and (max-width:640px) {
     .right h1 {
         font-size: 30px;
@@ -149,24 +153,36 @@ a {
 
 }
 
+#download-resume {
+    z-index: 100;
+    margin-top: 40px;
+    border: 2px solid white;
+    border-radius: 50px;
+}
+
 .right button {
-    margin-top: 30px;
     height: 50px;
     width: 150px;
-    border-color: white;
+    border: none;
     border-radius: 50px;
     font-size: large;
     background-color: transparent;
     color: white;
     cursor: pointer;
 }
+
+#download-resume :hover {
+    background: rgb(14, 215, 182);
+}
+
 @media screen and (max-width:640px) {
     .right button {
         height: 40px;
-    width: 120px;
-    font-size: medium;
+        width: 120px;
+        font-size: medium;
     }
 }
+
 .stroke-heading {
     position: relative;
     text-align: center;
@@ -212,55 +228,18 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    justify-content: space-evenly;
-    padding: 10px;
+    align-items: flex-start;
+    padding: 30px;
 }
 
-@media screen and (max-width:640px) {
-    .portfolio {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 80vw;
 
-    }
-
-    .colonm1,
-    .colonm2 {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 90vw;
-    }
-
-    .text-heading {
-        font-size: 24px;
-    }
-
-    .table-right {
-        margin-top: -10px;
-    }
-    .mybtnc{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .colonm1 img{
-        height: 100%;
-        width: 90vw;
-        object-fit: cover;
-        overflow: hidden;
-    }
-
-}
-
-.portfolio div h1 {
+.top-webdevel h1 {
     color: #343a40;
 }
 
 .colonm1 {
     height: 100%;
-    width: 34%;
+    width: 30%;
     display: flex;
     justify-content: center;
     /*  padding: 0px 20px;
@@ -268,11 +247,7 @@ a {
 }
 
 .colonm1 img {
-    /* 
-    height: 40vw;
-    width: 32vw; */
-    padding: 10px;
-    border-radius: 10px;
+    border-radius: 4px;
     opacity: 0.9;
     overflow: hidden;
     object-fit: cover;
@@ -282,6 +257,13 @@ a {
 .colonm1 img:hover {
     opacity: 1;
 }
+
+.top-webdevel{
+    padding: 0PX 30px;
+    padding-top: 20px;
+    text-align: center;
+}
+
 
 .colonm2 {
     padding: 20px;
@@ -322,6 +304,88 @@ a {
     margin-left: 15px;
     cursor: pointer;
 }
+
+.table-btn:hover {
+    background-color: rgb(11, 206, 175);
+    color: white;
+}
+
+
+
+@media screen and (max-width:940px) {
+    .portfolio {
+        column-gap: 5px;
+        align-items: flex-start;
+    }
+
+    .colonm1 {
+        width: 40%;
+
+    }
+
+    .colonm1 img {
+        height: 100%;
+        width: 100vh;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    .table{
+        margin-top: -25px;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:640px) {
+    .portfolio {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80vw;
+
+    }
+    .table{
+        margin-top: 0px;
+    }
+    .colonm2 {
+        padding: 0px;
+        margin-top: 10px;
+        /* margin: 0px 10px; */
+    }
+
+    .colonm1,
+    .colonm2 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90vw;
+    }
+
+    .text-heading {
+        font-size: 24px;
+    }
+    
+
+    .table-right {
+        margin-top: -10px;
+    }
+
+    .mybtnc {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .colonm1 img {
+        height: 100%;
+        width: 90vw;
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+}
+
+
 
 .stroke-heading-large {
     position: relative;
@@ -400,15 +464,6 @@ p {
     }
 }
 
-/* .experience {
-    height: 100%;
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    font-family: "Roboto", sans-serif;
-} */
 
 .experience h4,
 p {
@@ -455,16 +510,7 @@ p {
     flex-direction: column;
 }
 
-/* .right-side{
-    height: 100%;
-    width: 40%;
-    font-size: 30px;
-    font-family: "Roboto", sans-serif;
-    color: #343a40;
-    display: flex;
-    flex-direction: column;
 
-} */
 
 .left-side input {
     width: 100%;
@@ -506,14 +552,26 @@ p {
 
 .project {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
-
-
 
 .project img {
     width: 21vw;
     height: 10vw;
+}
+
+@media screen and (max-width:1000px) {
+    .project {
+        display: flex;
+        flex-direction: column;
+    }
+    .project-details {
+        margin: 10px 0px;
+    }
+    .project img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media screen and (max-width:640px) {
@@ -689,9 +747,7 @@ p {
     margin: 15px;
 }
 
-#news-app-img {
-    width: 18vw;
-}
+
 
 @media screen and (max-width:640px) {
     .service-details p {
@@ -709,13 +765,6 @@ p {
         height: auto;
     }
 
-    #news-app-img {
-        width: 80vw;
-    }
-
-    #my-notebook {
-        margin-top: 50px;
-    }
 }
 
 @media screen and (max-width:460px) {
@@ -802,11 +851,12 @@ p {
         width: 75vw;
     }
 
-    .subject input{
+    .subject input {
         border-radius: 3px;
         width: 75vw;
     }
-    .massage  textarea {
+
+    .massage textarea {
         border-radius: 3px;
         width: 75vw;
     }
